Listando usuários cadastrados

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,5 +8,11 @@
 
 <ion-content padding>
 
+  <ion-list no-lines>
+    <button ion-item *ngFor="let user of users | async" (click)="onChatCreate()">
+      {{ user.name }}
+    </button>
+  </ion-list>
+
   <button ion-button block (click)="onClick()">Sign Up</button>
 </ion-content>
