--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -40,6 +40,7 @@
 
     <br>
     <button ion-button full type="submit" [disabled]="!signupForm.valid">Create Account</button>
+    <button ion-button full color="danger" type="reset">Reset</button>
 
   </form>
 </ion-content>
