--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,5 +14,6 @@
     </button>
   </ion-list>
 
-  <button ion-button block (click)="onClick()">Sign Up</button>
+  <button ion-button color="secondary" block (click)="login()">Login</button>
+  <button ion-button block (click)="onSignup()">Sign Up</button>
 </ion-content>
