--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -15,25 +15,25 @@
   <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
 
     <ion-item>
-      <ion-icon name="person" item-left></ion-icon>
+      <ion-icon name="person" color="primary" item-left></ion-icon>
       <ion-label>Name</ion-label>
       <ion-input type="text" formControlName="name"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-icon name="at" item-left></ion-icon>
+      <ion-icon name="at" color="primary" item-left></ion-icon>
       <ion-label>Username</ion-label>
       <ion-input type="text" formControlName="username"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-icon name="mail" item-left></ion-icon>
+      <ion-icon name="mail" color="primary" item-left></ion-icon>
       <ion-label>E-mail</ion-label>
       <ion-input type="email" formControlName="email"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-icon name="lock" item-left></ion-icon>
+      <ion-icon name="lock" color="primary" item-left></ion-icon>
       <ion-label>Password</ion-label>
       <ion-input type="password" formControlName="password"></ion-input>
     </ion-item>
