Ionsegment na homePage, CustomLoggedHeader, BaseComponent

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,19 +1,29 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
+  <custom-logged-header [title]="view | capitalize:true"></custom-logged-header>
+
+  <ion-toolbar >
+    <ion-segment [(ngModel)]="view">
+      <ion-segment-button value="chats">Chats</ion-segment-button>
+      <ion-segment-button value="users">Users</ion-segment-button>
+    </ion-segment>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
 
-  <ion-list no-lines>
-    <button ion-item *ngFor="let user of users | async" (click)="onChatCreate()">
-      {{ user.name }}
-    </button>
-  </ion-list>
+  <div [ngSwitch]="view">
+    <ion-list no-lines *ngSwitchCase="'chats'" >
+      <ion-item *ngFor="let chat of chats" (click)="openChat()" >
+        {{ chat }}
+      </ion-item>
+    </ion-list>
+    <ion-list no-lines *ngSwitchCase="'users'" >
+        <ion-item *ngFor="let user of users | async" (click)="onChatCreate()" >
+          {{ user.name }}
+        </ion-item>
+      </ion-list>
+  </div>
 
-  <button ion-button color="secondary" block (click)="login()">Login</button>
   <button ion-button block (click)="onSignup()">Sign Up</button>
+  <button ion-button block (click)="onLogout()">Logout</button>
 </ion-content>
