--- a/src/pages/signin/signin.html
+++ b/src/pages/signin/signin.html
@@ -31,6 +31,7 @@
 
   </form>
   <button ion-button outline clear full color="primary" type="submit" (click)="onSignup()">Create Acount</button>
+  <button ion-button outline clear full color="primary" type="submit" (click)="home()">Home</button>
 
 </ion-content>
 
